# financial-app

./: .gitignore  expenses.db  pyproject.toml  render.yaml  requirements.txt
backend/: database.py  expense_api.py
