[tool.poetry]
name = "financial-app"
version = "0.1.0"
description = "Expense Tracker API"
authors = ["Dyenscappy <lidamosharanjay00@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
